zebra-rpc/src/methods/tests/snapshots/get_block_template_basic@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: block_template
---
{
  "capabilities": [
    "proposal"
  ],
  "version": 4,
  "previousblockhash": "0000000000d723156d9b65ffcf4984da7a19675ed7e2f06d9e5d5188af087bf8",
  "blockcommitmentshash": "09b60daeec8adbd96a08459e35f142fac3ac7ea5c5fb218f521c9da8b3428f91",
  "lightclientroothash": "09b60daeec8adbd96a08459e35f142fac3ac7ea5c5fb218f521c9da8b3428f91",
  "finalsaplingroothash": "09b60daeec8adbd96a08459e35f142fac3ac7ea5c5fb218f521c9da8b3428f91",
  "defaultroots": {
    "merkleroot": "453e5aa76d390b623e714cad2658c219393b3019e639e8d477f91eca7697b62b",
    "chainhistoryroot": "03bc75f00c307a05aed2023819e18c2672cbe15fbd3200944997def141967387",
    "authdataroot": "9e7e7313dee920062d78f2f738c6d127b303c5f4649cd9a1b92a955c06c02fe4",
    "blockcommitmentshash": "09b60daeec8adbd96a08459e35f142fac3ac7ea5c5fb218f521c9da8b3428f91"
  },
  "transactions": [],
  "coinbasetxn": {
    "data": "050000800a27a726b4d0d6c200000000f51c1c00010000000000000000000000000000000000000000000000000000000000000000ffffffff0903f51c1c04f09fa693ffffffff0480b2e60e0000000017a9147e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e87286bee000000000017a9140c0bcca02f3cba01a5d7423ac3903d40586399eb8738c94d010000000017a9144e3f0d9a33a2721604cbae2de8d9171e21f8fbe48740787d010000000017a91471e1df05024288a00802de81e08c437859586c8787000000",
    "hash": "453e5aa76d390b623e714cad2658c219393b3019e639e8d477f91eca7697b62b",
    "authdigest": "9e7e7313dee920062d78f2f738c6d127b303c5f4649cd9a1b92a955c06c02fe4",
    "depends": [],
    "fee": 0,
    "sigops": 0,
    "required": true
  },
  "longpollid": "00018424203eab7f731654014005000000000000000000",
  "workid": "[WorkId]",
  "target": "0555540000000000000000000000000000000000000000000000000000000000",
  "mintime": 1654008606,
  "mutable": [
    "time"
  ],
  "noncerange": "00000000ffffffff",
  "sigoplimit": 20000,
  "sizelimit": 2000000,
  "curtime": 1654008617,
  "bits": "20055554",
  "height": 1842421,
  "maxtime": 1654014005
}
