zebra-rpc/src/methods/tests/snapshots/get_block_template_invalid-proposal@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: block_template
---
"io-error-kind-unexpectedeof-message-failed-to-fill-whole-buffer"
